--- a/Swipe/index.html
+++ b/Swipe/index.html
@@ -22,6 +22,7 @@
         <li><a href="#">Resources</a></li>
         <li><a href="#">Pricing</a></li>
       </ul>
+      <button class="primary-button navbar-button">Sign in</button>
     </nav>
   </body>
 </html>
